--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -3,14 +3,14 @@ brands:
 #- name: q8
 #  config_file: q8.yml
 #
-#- name: ptbanc
-#  config_file: ptbanc.yml
+- name: ptbanc
+  config_file: ptbanc.yml
 
 #- name: trade99
 #  config_file: trade99.yml
 
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
