--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -2,7 +2,7 @@ brands:
 
 #- name: q8
 #  config_file: q8.yml
-#
+
 #- name: ptbanc
 #  config_file: ptbanc.yml
 
@@ -11,6 +11,12 @@ brands:
 
 - name: gigafx
   config_file: gigafx.yml
+
+#- name: brokerz
+#  config_file: brokerz.yml
+
+#- name: kontofx
+#  config_file: kontofx.yml
 
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
