--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -9,14 +9,14 @@ brands:
 #- name: trade99
 #  config_file: trade99.yml
 
-- name: gigafx
-  config_file: gigafx.yml
+#- name: gigafx
+#  config_file: gigafx.yml
 
 #- name: brokerz
 #  config_file: brokerz.yml
 
-#- name: kontofx
-#  config_file: kontofx.yml
+- name: kontofx
+  config_file: kontofx.yml
 
 #- name: strattonmarkets-eu
 #  config_file: strattonmarkets-eu.yml
