--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -3,7 +3,7 @@ tests_config:
 - module: src.test.python.ui.automation.implementation.ca.Test_SignUp
   class: SignUpTest
   tests:
-#    - test_check_sign_up
+    - test_check_sign_up
     - test_check_email_sign_up
 #    - test_registred_client_exist_in_crm
 #
