--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -5,10 +5,10 @@ tests_config:
 #  tests:
 #    - test_autorization_process
 
-- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
-  class: CreateNewCustomer
-  tests:
-    - test_create_new_customer
+#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_New_Customer
+#  class: CreateNewCustomer
+#  tests:
+#    - test_create_new_customer
 
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Customer_Details
 #  class: ReadCustomerDetails
@@ -20,15 +20,15 @@ tests_config:
 #  tests:
 #    - test_update_customer
 
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
-#  class: CreateLead
-#  tests:
-#    - test_create_lead_api
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
-#  class: ReadLeads
-#  tests:
-#    - test_read_leads_api
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Create_Lead
+  class: CreateLead
+  tests:
+    - test_create_lead_api
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
+  class: ReadLeads
+  tests:
+    - test_read_leads_api
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
 #  class: LoginToken
