--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -12,11 +12,11 @@ brands:
 #- name: kontofx
 #  config_file: kontofx.yml
 #
-#- name: brokerz
-#  config_file: brokerz.yml
+- name: brokerz
+  config_file: brokerz.yml
 #
 #- name: gigafx
 #  config_file: gigafx.yml
 #
-- name: trade99
-  config_file: trade99.yml
+#- name: trade99
+#  config_file: trade99.yml
