--- a/src/main/python/ui/crm/model/BrandsXpath/dax-300_xpath.yml
+++ b/src/main/python/ui/crm/model/BrandsXpath/dax-300_xpath.yml
@@ -2,3 +2,11 @@
 FinancialTransactionsPage:
   client_name_element:  "(//*[@id='listBody']//tr/td[4])[%s]"
   modified_time_element: "(//*[contains(@id,'row_')]/td[12])[%s]"
+LeadsModule:
+  check_first_line_email_1: "//tbody[@id = 'listBody']/tr[1]/td[8]"
+  check_first_line_email_2: "//tbody[@id = 'listBody']/tr[2]/td[8]"
+  check_first_line_exist: "//tbody[@id = 'listBody']/tr[1]/td[11]"
+  check_first_line_leads_no1: "//tbody[@id = 'listBody']/tr[1]/td[2]"
+  check_first_line_leads_no2: "//tbody[@id = 'listBody']/tr[2]/td[2]"
+  edit_status: "//*[@id='leadstatus_mass_edit_check']/div[1]/div"
+  mass_edit_leads: "//*[@id='list_action_buttons']/input[2]"
