--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,8 +1,8 @@
 brands:
 
-#- name: newforexstage2
-#  config_file: newforexstage2.yml
-#
+- name: newforexstage2
+  config_file: newforexstage2.yml
+
 #- name: ptbanc
 #  config_file: ptbanc.yml
 #
@@ -17,9 +17,9 @@ brands:
 #
 #- name: gigafx
 #  config_file: gigafx.yml
-
+#
 #- name: trade99
 #  config_file: trade99.yml
-
-- name: dax-300
-  config_file: dax-300.yml
+#
+#- name: dax-300
+#  config_file: dax-300.yml
