--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -185,13 +185,13 @@ tests_config:
 #    - test_crm_configurations_pages_loading
 #
 ######################################### WORKFLOWS MODULE #############################################
-#- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
-#  class: WorkflowsModulesTest
-#  tests:
-#    - test_create_workflows
+- module: src.test.python.ui.automation.implementation.crm.tests_workflows.Test_Workflows_Modules
+  class: WorkflowsModulesTest
+  tests:
+    - test_create_workflows
 #    - test_check_workflow_by_status
 #    - test_check_workflow_by_country
-#    - test_delete_workflow
+    - test_delete_workflow
 #
 ########################################### USER_MANAGEMENT ############################################
 #- module: src.test.python.ui.automation.implementation.crm.user_management.Test_User_Management
@@ -209,8 +209,8 @@ tests_config:
 #    - test_sorting
 #
 ############################################# DRAGON TESTS ###############################################
-- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
-  class: CheckDragonTest
-  tests:
+#- module: src.test.python.ui.automation.implementation.crm.tests_base_crm.Test_Dragon
+#  class: CheckDragonTest
+#  tests:
 #    - test_dragon_leads
-    - test_dragon_clients
+#    - test_dragon_clients
