--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,7 +1,7 @@
 brands:
 
-#- name: gmo
-#  config_file: gmo.yml
+- name: gmo
+  config_file: gmo.yml
 #
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
@@ -9,8 +9,8 @@ brands:
 #- name: brokerxp
 #  config_file: brokerxp.yml
 
-- name: kaya_fx
-  config_file: kaya_fx.yml
+#- name: kaya_fx
+#  config_file: kaya_fx.yml
 
 #- name: itrader
 #  config_file: itrader.yml
