--- a/src/test/python/resources/config/brands1.yml
+++ b/src/test/python/resources/config/brands1.yml
@@ -1,13 +1,13 @@
 brands:
 
-#- name: kayafx
-#  config_file: kaya_fx.yml
+- name: kayafx
+  config_file: kaya_fx.yml
 #
 #- name: itrader
 #  config_file: itrader.yml
 #
-- name: gmo
-  config_file: gmo.yml
+#- name: gmo
+#  config_file: gmo.yml
 #
 #- name: capitalmarketsbanc
 #  config_file: capitalmarketsbanc.yml
