--- a/src/test/python/resources/config/tests.yml
+++ b/src/test/python/resources/config/tests.yml
@@ -24,11 +24,11 @@ tests_config:
   class: CreateLead
   tests:
     - test_create_lead_api
-#
-#- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
-#  class: ReadLeads
-#  tests:
-#    - test_read_leads_api
+
+- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Read_Leads
+  class: ReadLeads
+  tests:
+    - test_read_leads_api
 #
 #- module: src.test.python.ui.automation.implementation.crm.tests_api.Test_Login_Token
 #  class: LoginToken
